# modalities

./: .buildinfo  .coverage.toml  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_DEV.md  CITATION.cff  CONTRIBUTING.md  Dataset.md  Dockerfile  LICENSE  MMAP_DATASET_README.md  README.md  SFT_README.md  apptainer.def  benchmarking.html  configuration.html  entrypoints.html  fet_files.py  future_work.html  genindex.html  index.html  known_issues.html  memmap.html  method_counts.csv  model_cards.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  sphinx-reading-durations.json  start.sh  test_dockerized.sh  vs_code_setup.html
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  documentation.yaml  feature-request.yaml
.github/workflows/: arc_runner_test.yml  build_and_deploy_documentation.yml  build_documentation.yml  check_arc_runner_env.yml  linting.yml  pylint.yml  release_automation.yml  tests.yml  tests_full.yml
_modules/: index.html
_modules/modalities/: api.html  batch.html  evaluator.html  exceptions.html  gym.html  loss_functions.html  main.html  trainer.html  util.html
_sources/: memmap.rst.txt  vs_code_setup.rst.txt
_sources/api/: modalities.checkpointing.fsdp.rst.txt  modalities.checkpointing.rst.txt  modalities.checkpointing.stateful.rst.txt  modalities.checkpointing.torch.rst.txt  modalities.config.rst.txt  modalities.conversion.gpt2.rst.txt  modalities.conversion.rst.txt  modalities.dataloader.open_gptx_dataset.rst.txt  modalities.dataloader.preprocessing.rst.txt  modalities.dataloader.rst.txt  modalities.inference.rst.txt  modalities.inference.text.rst.txt  modalities.logging_broker.rst.txt  modalities.logging_broker.subscriber_impl.rst.txt  modalities.models.coca.rst.txt  modalities.models.components.rst.txt  modalities.models.gpt2.rst.txt  modalities.models.huggingface.rst.txt  modalities.models.huggingface_adapters.rst.txt  (+23 more)
ai_24_demo/: modalities_demo.ipynb
api/: modalities.checkpointing.fsdp.html  modalities.checkpointing.html  modalities.checkpointing.stateful.html  modalities.checkpointing.torch.html  modalities.config.html  modalities.conversion.gpt2.html  modalities.conversion.html  modalities.dataloader.html  modalities.dataloader.open_gptx_dataset.html  modalities.dataloader.preprocessing.html  modalities.html  modalities.inference.html  modalities.inference.text.html  modalities.logging_broker.html  modalities.logging_broker.subscriber_impl.html  modalities.models.coca.html  modalities.models.components.html  modalities.models.gpt2.html  modalities.models.html  modalities.models.huggingface.html  modalities.models.huggingface_adapters.html  modalities.models.mamba.html  modalities.models.mamba.ops.html  modalities.models.mamba.ops.triton.html  modalities.models.mamba.utils.html  modalities.models.parallelism.html  modalities.models.vision_transformer.html  modalities.nn.html  modalities.nn.model_initialization.html  modalities.optimizers.html  modalities.preprocessing.html  modalities.registry.html  modalities.running_env.fsdp.html  modalities.running_env.html  modalities.tokenization.html  modalities.training.activation_checkpointing.html  modalities.training.gradient_clipping.html  modalities.training.html  modalities.utils.benchmarking.html  modalities.utils.html  (+2 more)
config_files/: config.yaml  config_example_audio_mem_map_dataset.yaml  config_example_coca.yaml  config_example_coca_audio.yaml  config_example_coca_audio_vision.yaml  config_example_coca_vision.yaml  config_example_coca_webdataset.yaml  config_example_hf_meditron_7B_instruction.yaml  config_example_mem_map_dataset.yaml  config_example_openGPTx_dataset.yaml  config_lorem_ipsum.yaml  data_config.yaml  example_separate_datasets.yaml  packed_dataset_config.yaml  test_fineweb_edu.yml
container/: build_container.sh  modalities.def  slurm_singularity.sbatch
data/: lorem_ipsum.idx  lorem_ipsum.jsonl  lorem_ipsum.pbin  lorem_ipsum.txt  lorem_ipsum_instruct_multi_turn.idx  lorem_ipsum_instruct_multi_turn.jsonl  lorem_ipsum_long.idx  lorem_ipsum_long.jsonl  lorem_ipsum_long.pbin  lorem_ipsum_sft.jsonl  lorem_ipsum_sft_converted.510fe89.idx  lorem_ipsum_sft_converted.510fe89.jsonl  lorem_ipsum_sft_converted.510fe89.pbin  lorem_ipsum_sft_converted.64a5f855-7b1b-496c-82fd-747d5044d496.pbin  lorem_ipsum_sft_converted.9dee295b-f73c-4fe1-b573-acb163fe6c73.jsonl  lorem_ipsum_sft_converted.aadd295.idx  lorem_ipsum_sft_converted.aadd295.jsonl  lorem_ipsum_sft_converted.aadd295.pbin  lorem_ipsum_sft_converted.d267ec3.jsonl  lorem_ipsum_sft_converted.d267ec3.pbin  lorem_ipsum_sft_converted.jsonl  lorem_ipsum_sft_converted_more_data.64a5f855-7b1b-496c-82fd-747d5044d496.pbin  postprocessed_fine_web_10BT_10.idx  postprocessed_fine_web_10BT_10.jsonl  sft_chat_template_config.510fe89.yaml  sft_chat_template_config.64a5f855-7b1b-496c-82fd-747d5044d496.yaml  sft_chat_template_config.9dee295b-f73c-4fe1-b573-acb163fe6c73.yaml  sft_chat_template_config.d267ec3.yaml  wiki_data_downloader.sh
docs/: fsdp1_vs_fsdp_2.md  supported_features.md
notebooks/: components.yaml  redpajama_tokenizer_test.ipynb
scripts/: coca_step_1.sh  combine_parts_to_file.sh  compute_layer_norms.py  convco_for_reverts.sh  generate_text.py  plot_layer_norms.py  split_file_into_chunks.sh  test_p2p_comm.py  train.sh  update_old_checkpoints.py
src/: get_inference_model_with_yaml_file.py  main.py  setup.py
tests/: conftest.py  generate_text.py  mocks.py  run_all_tests.sh  run_distributed_tests.sh  test_blub.py  test_evaluation.py  test_evaluator.py  test_gradient_clipping.py  test_gym.py  test_inference.py  test_initialization.py  test_initialization_fsdp1.py  test_initialization_fsdpx.py  test_loss_functions.py  test_loss_masking.py  test_lr_scheduler.py  test_main.py  test_optimizer_factory.py  test_rotary_qkv_transform.py  test_span_masking_collator.py  test_tokenization.py  test_torch_compile.py  test_util.py  test_utils.py  test_weight_tying.py  tests.py  utility.py
(+951 files in other folders)
