[project]
name = "modalities"
version = "0.5.0"
requires-python = ">=3.10,<3.14"
description = "Modalities, a PyTorch-native framework for distributed and reproducible foundation model training."
readme = "README.md"
dependencies = [
    "numpy",
    "torch<2.11.0",
    "ninja",
    "packaging",
    "tqdm",
    "pyyaml",
    "transformers<5.0.0",
    "datasets",
    "protobuf",
    "SentencePiece",
    "rich",
    "omegaconf",
    "pydantic",
    "click",
    "click_pathlib",
    "jq",
    "class_resolver",
    "matplotlib",
    "wandb",
    "einops>=0.7.0",
    "flash-attn==2.8.3; platform_system != 'Darwin' and platform_machine != 'aarch64'",
    "debugpy",  # For VSCode debugging support
]

[project.urls]
Homepage = "https://github.com/Modalities/modalities"
Issues = "https://github.com/Modalities/modalities/issues"

[project.optional-dependencies]
linting = ["pre-commit"]
tests = ["pytest", "pytest-cov", "debugpy"]
install_helper = ["ninja"]

[project.scripts]
modalities = "modalities.__main__:main"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv.extra-build-dependencies]
flash-attn = [
    { requirement = "torch", match-runtime = true },
    { requirement = "ninja", match-runtime = true },
]

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term --cov-report html"

[tool.coverage.run]
branch = true
omit = ["*/src/modalities/dataloader/open_gptx_dataset/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]


ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"